# airy

./: .gitignore  Cargo.toml  README.md  SLACK_INTERFACE.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.clinerules/: intro.mdc  message-system-design.mdc  user-management-design.mdc
airy-core/: Cargo.toml
airy-core/src/: error.rs
docs/: figma-slack-mobile-design.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src/api/: auth.ts  user.ts
src/axios/: index.ts
src/components/: LoginForm.vue
src/hooks/: useAuth.ts
src/layout/: MobileLayout.vue  SlackLayout.vue  SlackMobileLayout.vue
src/layouts/: MainLayout.vue
src/locales/: index.ts
src/plugins/: index.ts
src/router/: index.ts
src/store/: auth.ts
src/styles/: index.scss  slack-theme.scss  variables.scss
src/types/: index.ts
src/utils/: avatar.ts  index.ts
src/views/: DashboardPage.vue  LoginPage.vue  ProfilePage.vue  SettingsPage.vue
src/views/chat/: ChatPage.vue
src/views/dashboard/: DashboardPage.vue
src/views/login/: LoginPage.vue
